@@ -866,3 +866,5 @@ Changes only in Hortonworks github and not in hadoop-2.7.1 and hence not covered
     HADOOP-12464. Interrupted client may try to fail-over and retry (kihwal)
 
     BUG-57322. HADOOP-13103. Group resolution from LDAP may fail on javax.naming.ServiceUnavailableException
+
+    HADOOP-9477. Add posixGroups support for LDAP groups mapping service. (Dapeng Sun via Yongjun Zhang)
